--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,16 @@
 /tmp
 /out-tsc
 /bazel-out
+/www
+/.angular
+/.cache
 
 # Node
 /node_modules
 npm-debug.log
 yarn-error.log
+pnpm-debug.log
+*.tgz
 
 # IDEs and editors
 .idea/
@@ -28,6 +33,18 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
+# MacOS
+.DS_Store
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+.Trash-*
+
 # Miscellaneous
 /.angular/cache
 .sass-cache/
@@ -36,7 +53,12 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+/npm-debug.log
+.yarn-integrity
 
-# System files
-.DS_Store
-Thumbs.db
+# dotenv
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
